Merge branch 'integration-5.6' into ceBaseHistory-NS-5.6
# Conflicts:
#	collections/src/main/java/com/epam/deltix/util/collections/ByteQueue.java
#	lang/src/main/java/deltix/util/LangUtil.java
#	util/src/main/java/com/epam/deltix/qsrv/hf/spi/conn/ReconnectableImpl.java
#	util/src/main/java/com/epam/deltix/util/concurrent/FrequencyLimiter.java
#	util/src/main/java/com/epam/deltix/util/concurrent/QuickExecutor.java
#	util/src/main/java/com/epam/deltix/util/concurrent/QuickExecutorWithQueue.java
#	util/src/main/java/com/epam/deltix/util/concurrent/ThrottlingExecutor.java
#	util/src/main/java/com/epam/deltix/util/csvx/TextReader.java
#	util/src/main/java/com/epam/deltix/util/currency/CurrencyCodeList.java
#	util/src/main/java/com/epam/deltix/util/io/FileBasedRepository.java
#	util/src/main/java/com/epam/deltix/util/io/FileSystemWatcher.java
#	util/src/main/java/com/epam/deltix/util/io/SelfFlushingBufferedOutputStream.java
#	util/src/main/java/com/epam/deltix/util/log/CurrentMonthDate.java
#	util/src/main/java/com/epam/deltix/util/net/NetUtils.java
#	util/src/main/java/com/epam/deltix/util/oauth/authcode/AuthCodeClient.java
#	util/src/main/java/com/epam/deltix/util/oauth/authcode/AuthCodeResponseHandler.java
#	util/src/main/java/com/epam/deltix/util/oauth/authcode/Oauth2CodeClientImpl.java
#	util/src/main/java/com/epam/deltix/util/oauth/service/CertificateTokenQuery.java
#	util/src/main/java/com/epam/deltix/util/oauth/service/Oauth2ClientImpl.java
#	util/src/main/java/com/epam/deltix/util/text/CharSequenceParser.java
#	util/src/main/java/com/epam/deltix/util/time/TimerRunner.java
#	util/src/main/java/com/epam/deltix/util/vsocket/VSChannelImpl.java
#	util/src/main/java/com/epam/deltix/util/vsocket/VSClient.java
#	util/src/main/java/com/epam/deltix/util/vsocket/VSDispatcher.java
#	util/src/main/java/com/epam/deltix/util/vsocket/VSServer.java
#	util/src/main/java/com/epam/deltix/util/vsocket/VSServerFramework.java
#	util/src/main/java/com/epam/deltix/util/vsocket/VSTranspor