@@ -1,18 +1,10 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'org.owasp:dependency-check-gradle:9.0.9'
-    }
-}
-
 plugins {
     id "io.spring.dependency-management" version '1.1.7'
     id "de.undercouch.download" version '5.1.0'
     id "com.github.spotbugs" version '5.0.14' apply false
     // id 'deltix.gradle.plugins.velocity' version '1.3.0' apply false TODO: investigate
-    id 'deltix.gradle.plugin.gitlab-release' version '1.0.12'
+    id 'deltix.gradle.plugin.gitlab-release' version '1.1.0'
+    id "org.owasp.dependencycheck" version "12.1.9"
 }
 
 group = 'deltix.qsrv'
@@ -70,7 +62,7 @@ configure(leafProjects) {
     // Defines versions of dependencies to be used by subprojects
     dependencyManagement {
         imports {
-            mavenBom 'org.junit:junit-bom:5.13.0'
+            mavenBom 'org.junit:junit-bom:5.14.0'
         }
         dependencies {
             dependency 'deltix:deltix-thread-affinity:1.0.3'
@@ -153,7 +145,8 @@ configure(leafProjects) {
             }
         }
 
-        jvmArgs '-Dgflog.sync=true', '-Dgflog.console.appender.wrap=true' // sync logging to not mix up messages from different tests
+        // sync logging to not mix up messages from different tests
+        jvmArgs '-Dgflog.sync=true', '-Dgflog.console.appender.wrap=true', '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
     }
 
     spotbugs {
@@ -162,9 +155,11 @@ configure(leafProjects) {
         reportLevel = "medium"
         excludeFilter = rootProject.file('spotbugs-excludes.xml')
     }
-    spotbugsTest.enabled = false // disable SpotBugs for tests
+    tasks.named('spotbugsTest') {
+        enabled = false // disable SpotBugs for tests
+    }
 
-    tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
+    tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach {
         enabled = enableSpotbugs
 
         reports {
@@ -173,7 +168,7 @@ configure(leafProjects) {
         }
     }
 
-    jar {
+    tasks.named('jar') {
         manifest {
             archiveBaseName.set(base.archivesName)
             attributes 'Manifest-Version': "1.0",
@@ -184,36 +179,40 @@ configure(leafProjects) {
         }
     }
 
-    processResources {
+    tasks.named('processResources') {
         from sourceSets.main.java.srcDirs
         exclude '**/*.java'
         includeEmptyDirs = false
     }
 
-    processTestResources {
+    tasks.named('processTestResources') {
         from sourceSets.test.java.srcDirs
         exclude '**/*.java'
         includeEmptyDirs = false
     }
 
-    afterEvaluate {
-        // populate project classpath after evaluating
-        jar.manifest.attributes 'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' ')
+    tasks.named('jar') {
+        manifest.attributes(
+                'Class-Path': provider {
+                    configurations.runtimeClasspath.collect { it.name }.join(' ')
+                }
+        )
     }
 
     // Contains current project jar and all required dependencies for that project
     def allJarsPath = 'build/alljars'
 
-    task gatherProjectDependencies(type: Sync) {
+    tasks.register('gatherProjectDependencies', Sync) {
         description = 'Copies all project runtime dependencies to ' + allJarsPath
         from project.configurations.runtimeClasspath
         into allJarsPath
     }
 
-    task gatherAllJarsWithDependencies(type: Copy, dependsOn: ['jar', gatherProjectDependencies]) {
+    tasks.register('gatherAllJarsWithDependencies', Copy) {
+        dependsOn 'jar', 'gatherProjectDependencies'
         group = "build"
         description = 'Copies all project JAR and all its runtime dependencies to ' + allJarsPath
-        from jar // Main produced JAR of the subproject
+        from tasks.named('jar') // Main produced JAR of the subproject
         into allJarsPath
     }
 
@@ -245,20 +244,22 @@ configure(leafProjects) {
 
     /// Support for publishing -sources.jar and -javadoc.jar artifacts:
 
-    task sourcesJar(type: Jar, dependsOn: classes) {
+    var sourcesJar = tasks.register('sourcesJar', Jar) {
+        dependsOn 'classes'
         archiveClassifier.set('sources')
         archiveBaseName.set(base.archivesName)
         from sourceSets.main.allSource
     }
 
-    task javadocJar(type: Jar, dependsOn: javadoc) {
+    var javadocJar = tasks.register('javadocJar', Jar) {
+        dependsOn 'javadoc'
         enabled = includeJavaDocs
         archiveClassifier.set('javadoc')
         archiveBaseName.set(base.archivesName)
         from javadoc.destinationDir
     }
 
-    tasks.withType(Javadoc) {
+    tasks.withType(Javadoc).configureEach {
         options.addStringOption('Xdoclint:all,-reference', '-quiet') //  disables fail on missing JavaDoc reference
         //options.addStringOption('Xdoclint:none', '-quiet') // suppress all warnings
     }
@@ -306,7 +307,7 @@ configure(leafProjects) {
     }
 
     if (!includeJavaDocs) {
-        tasks.withType(Javadoc).all { enabled = false }
+        tasks.withType(Javadoc).configureEach { enabled = false }
     }
 
 }
@@ -318,22 +319,35 @@ allprojects {
     dependencyCheck {
         // skipProjects = nonJavaProjects
         failBuildOnCVSS = 7
-        suppressionFile = file("$rootDir/dependency-check-suppression-file.xml")
+        suppressionFile = "$rootDir/dependency-check-suppression-file.xml"
         analyzers {
             assemblyEnabled = false
         }
 
         scanConfigurations = ["runtimeClasspath", "compileClasspath"]
 
+        // Use NVD mirror inside our infrastructure
+        // See https://gitlab.deltixhub.com/Deltix/Common/MultilingualPackage/-/wikis/DependencyChecker
+        analyzers {
+            kev {
+                enabled = true
+                url  = 'http://vulnz-nvd-mirror.vulnz-nvd-mirror.svc.cluster.local/known_exploited_vulnerabilities.json'
+            }
+        }
+
         nvd {
-            apiKey = findProperty('NVD_API_KEY') ?: System.getenv('NVD_API_KEY')
+            datafeedUrl  = 'http://vulnz-nvd-mirror.vulnz-nvd-mirror.svc.cluster.local/nvdcve-{0}.json.gz'
+            delay = 100
+
+            // API key is not needed for internal mirror
+            // apiKey = findProperty('NVD_API_KEY') ?: System.getenv('NVD_API_KEY')
         }
     }
 }
 
 def testTasks = ext.leafProjects*.test
 
-task generateTestReport(type: TestReport) {
+tasks.register('generateTestReport', TestReport) {
     group = 'verification'
     reportOn testTasks
     destinationDirectory.set(file("$rootDir/build/reports/junit/html/all_reports_merged")) // TODO: Pick better name for merged report
